fix: correcting margin on tablets and larger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,6 +366,10 @@ main {
     .technique {
         max-width:60%;
     }
+
+    .technique-progress {
+        margin:0;
+    }
     
     .inner-technique {
         margin:30px 60px;
